# advent_of_code_2021

./: Makefile  README.md  mypy.ini  pyproject.toml
advent/: cli.py  io_utils.py  logs.py
advent/day_01/: task_1.py  task_2.py
advent/day_02/: task_1.py  task_2.py
advent/day_03/: task_1.py  task_2.py
advent/day_04/: task_1.py  task_2.py
advent/day_05/: task_1.py  task_2.py
advent/day_06/: task_1.py  task_2.py
advent/day_07/: task_1.py  task_2.py
advent/day_08/: task_1.py  task_2.py
advent/day_09/: task_1.py  task_2.py
advent/day_1/: task_1.py  task_2.py
advent/day_10/: task_1.py  task_2.py
advent/day_11/: task_1.py  task_2.py
advent/day_12/: graph.py  interfaces.py  task_1.py  task_2.py  visualize.py
advent/day_13/: task_1.py  task_2.py
advent/day_14/: task_1.py  task_2.py
advent/day_15/: task_1.py  task_2.py
advent/day_16/: task_1.py  task_2.py
advent/day_17/: task_1.py  task_2.py
advent/day_18/: task_1.py  task_2.py  test_task_1.py
advent/day_19/: task_1.py  task_2.py
advent/day_20/: task_1.py  task_2.py
advent/day_21/: task_1.py  task_2.py
advent/day_22/: task_1.py  task_2.py  test_task_2.py
advent/day_23/: dfs.py  dfs2.py  enums.py  input_parsing.py  map.py  task_1.py  task_2.py  test_map.py
advent/day_24/: alu.py  parser.py  task_1.py
