[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Tomasz Maćkowiak <kurazu@kurazu.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"
ipython = "^7.30.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
